Fix utils namespacing (#5)
* namespacing

* require utils module

* enqueue form => enqueue just in case

* filter aj jobs by rejecting singletons and activejob::base itself

* add rubocop to ci just in case

* fix enqueuer redirect path

--- a/lib/sidekiq/enqueuer/views/index.erb
+++ b/lib/sidekiq/enqueuer/views/index.erb
@@ -15,7 +15,7 @@
         <td width="40%"><%= job.params.map(&:name).join(', ') %></td>
         <td width="20%">
           <a class="btn btn-danger btn-xs" href="<%= root_path %>enqueuer/<%= job.name %>" style="color: white;">
-            Enqueue Form
+            Enqueue
           </a>
         </td>
       </tr>
